[package]
name = "hal"
version = "0.1.8"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.25"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
syntect = "5.3.0"
ureq = { version = "3.1.4", features = ["json"] }
